# kirjat-rs

./: Cargo.toml  README.md
src/: lib.rs  main.rs  utils.rs
src/features/: mod.rs  tui.rs
src/scrapers/: jamera.rs  mod.rs  sanomapro.rs
src/sources/: jamera.rs  mod.rs  otava.rs  sanomapro.rs  suomalainen.rs
src/structs/: currency.rs  kirja.rs  mod.rs  response.rs
