[package]
name = "kirjat-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.64"
moka = "0.9.4"
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.13"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"

dialoguer = { version = "0.10.2", optional = true }
console = { version = "0.15.1", optional = true }

[features]
default = ["tui"]
tui = ["dialoguer", "console"]
