[package]
name = "kirjat-rs"
description = "provides prices for finnish textbooks from multiple stores"
version = "0.6.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/xypine/kirjat-rs"
documentation = "https://docs.rs/kirjat-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "kirjat"
path = "src/lib.rs"

[[bin]]
name = "kirjat-rs"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.64"
moka = "0.9.4"
reqwest = { version = "0.11" }
scraper = "0.13"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"

dialoguer = { version = "0.10.2", optional = true }
console = { version = "0.15.1", optional = true }
thiserror = "1.0"
async-trait = "0.1.57"
tokio = { version = "1.21.2", optional = true, features = ["full"] }

[features]
default = []
tui = ["dialoguer", "console", "tokio"]
