[package]
name = "kirjat-rs"
description = "provides prices for finnish textbooks from multiple stores"
version = "0.7.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/xypine/kirjat-rs"
documentation = "https://docs.rs/kirjat-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "kirjat"
path = "src/lib.rs"

[[bin]]
name = "kirjat-rs"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.64"
moka = { version = "0.9.4", features = ["future"] }
reqwest = { version = "0.11" }
scraper = "0.13"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"

dialoguer = { version = "0.10.2", optional = true }
console = { version = "0.15.1", optional = true }
thiserror = "1.0"
async-trait = "0.1.57"
tokio = { version = "1.21.2", optional = true, features = ["full"] }
futures = "0.3.25"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", optional = true }

[features]
default = ["tokio"]
tui = ["dialoguer", "console", "tracing-subscriber"]

[profile.release]
lto = true
strip = true
